Fixed Layout Issues With Bootstrap And Custom CSS

--- a/my-react-app/src/components/MovieCard.css
+++ b/my-react-app/src/components/MovieCard.css
@@ -6,11 +6,12 @@
   text-align: center;
 }
 
-.movie-poster{
+.movie-poster {
   position: relative;
+  width: fit-content;
 }
 
-button.favorite-btn{
+button.favorite-btn {
   position: absolute;
   right: 5%;
   top: 3%;
